# asquaredos

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  asquaredos.c  big_new.txt  commands.txt  flash_region_custom.ld  gdbstart.txt  memmap_custom.ld  old.txt  rp2040.cfg
doc/: overview.tex
final-doc/: final.tex
kern/: boot.c  boot.h  context_switch.asm  context_switch.h  context_switch.s  mpu.c  mpu.h  palloc.c  palloc.h  resources.c  resources.h  scheduler.c  scheduler.h  vm.c  vm.h  zalloc.c  zalloc.h
kern/utils/: list.h  panic.h
proposal-doc/: proposal.tex
shared/: shared.h
testing/: nofoo.txt  withfoo.txt
user/: allocator.c  allocator.h
userprogram/: CMakeLists.txt  CMakeLists_old.txt  memmap_no_flash_custom.ld  userprogram.c
